language/move-lang/tests/move_check/typing/type_variable_join_threaded_unpack_invalid.exp
error: 

    ┌── tests/move_check/typing/type_variable_join_threaded_unpack_invalid.move:34:9 ───
    │
 34 │         f1
    │         ^^ Invalid return expression
    ·
 32 │         let Box { f1, f2 }  = Container::get(&v);
    │             -------------- The type: integer
    ·
 30 │     fun t0(): bool {
    │               ---- Is not compatible with: 'bool'
    │

error: 

    ┌── tests/move_check/typing/type_variable_join_threaded_unpack_invalid.move:39:31 ───
    │
 39 │         let Box { f1, f2 }  = Container::get(&v);
    │                               ^^^^^^^^^^^^^^^^^^ Constraint not satisfied.
    ·
 39 │         let Box { f1, f2 }  = Container::get(&v);
    │             -------------- The resource type '0x1::M::Box<0x1::M::R>' does not satisfy the constraint 'copyable'
    ·
 24 │     resource struct R{}
    │     -------- The type's constraint information was determined here
    ·
 10 │     public fun get<V: copyable>(self: &T<V>): V {
    │                       -------- 'copyable' constraint declared here
    │

